--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
     "isolatedModules": true /* Ensure that each file can be safely transpiled without relying on other imports. */,
-
+    "emitDeclarationOnly": true,
+    "allowImportingTsExtensions": true,
     /* Emit */
     "outDir": "./dist" /* Redirect output structure to the directory. */,
     "declaration": true /* Generate .d.ts files. */,
